--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,10 @@
+DirectoryIndex router.php index.php index.html
+
 RewriteEngine On
+# If the request is not for a valid directory
+RewriteCond %{REQUEST_FILENAME} !-d
+# If the request is not for a valid file
 RewriteCond %{REQUEST_FILENAME} !-f
+# If the request is not for a valid link
+RewriteCond %{REQUEST_FILENAME} !-l
 RewriteRule ^(.*)$ router.php/$1 [L,QSA]
