--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,7 @@ DirectoryIndex router.php index.php index.html
 
 RewriteEngine On
 # If the request is not for a valid directory
-RewriteCond %{REQUEST_FILENAME} !-d
+# RewriteCond %{REQUEST_FILENAME} !-d
 # If the request is not for a valid file
 RewriteCond %{REQUEST_FILENAME} !-f
 # If the request is not for a valid link
