--- a/.htaccess
+++ b/.htaccess
@@ -8,3 +8,11 @@ RewriteCond %{REQUEST_FILENAME} !-f
 # If the request is not for a valid link
 RewriteCond %{REQUEST_FILENAME} !-l
 RewriteRule ^(.*)$ router.php/$1 [L,QSA]
+
+<FilesMatch "\.(?i:gif|jpe?g|png|webp|ico|css|js|svg)$">
+
+  <IfModule mod_headers.c>
+    Header set Cache-Control "max-age=172800, public, must-revalidate"
+  </IfModule>
+
+</FilesMatch>
